# gsl-ASW

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  _config.yml  atom.cpp  atom.h  gaunt.cpp  gaunt.h  log_mesh.cpp  log_mesh.h  main.cpp  numerov_solver.cpp  numerov_solver.h  spherical_fun.cpp  spherical_fun.h  structure_const.cpp  structure_const.h
docs/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
docs/docs/: Doxyfile  Makefile  cmake_install.cmake
docs/docs/doxygen/html/: annotated.html  atom_8h_source.html  atomic__quantity_8h_source.html  augmented__fun_8h_source.html  augmented__spherical__wave_8h_source.html  bloch__sum_8h_source.html  brillouin__zone__integration_8h_source.html  classAtom-members.html  classAtom.html  classAtomic__quantity-members.html  classAtomic__quantity.html  classAugmented__Bessel-members.html  classAugmented__Bessel.html  classAugmented__Hankel-members.html  classAugmented__Hankel.html  classAugmented__function-members.html  classAugmented__function.html  classAugmented__spherical__wave-members.html  classAugmented__spherical__wave.html  classBessel__container-members.html  classBessel__container.html  classBessel__function-members.html  classBessel__function.html  classBloch__sum-members.html  classBloch__sum.html  classBloch__sum_1_1Container-members.html  classBloch__sum_1_1Container.html  classBloch__summed__structure__constant-members.html  classBloch__summed__structure__constant.html  classBloch__summed__structure__constant_1_1Container-members.html  classBloch__summed__structure__constant_1_1Container.html  classBrillouin__sampler-members.html  classBrillouin__sampler.html  classBrillouin__zone__integrator-members.html  classBrillouin__zone__integrator.html  classColdSmearing__sampler-members.html  classColdSmearing__sampler.html  classCrystal__t-members.html  classCrystal__t.html  classDensity-members.html  (+135 more)
docs/docs/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/: annotated.html  atom_8h_source.html  atomic__quantity_8h_source.html  augmented__fun_8h_source.html  augmented__spherical__wave_8h_source.html  bloch__sum_8h_source.html  classAtom-members.html  classAtom.html  classAtomic__quantity-members.html  classAtomic__quantity.html  classAugmented__Bessel-members.html  classAugmented__Bessel.html  classAugmented__Hankel-members.html  classAugmented__Hankel.html  classAugmented__function-members.html  classAugmented__function.html  classAugmented__spherical__wave-members.html  classAugmented__spherical__wave.html  classBessel__function-members.html  classBessel__function.html  classBloch__sum-members.html  classBloch__sum.html  classBloch__summed__structure__constant-members.html  classBloch__summed__structure__constant.html  classCrystal-members.html  classCrystal.html  classDensity-members.html  classDensity.html  classEffective__potential.html  classEnvelope__Bessel-members.html  classEnvelope__Bessel.html  classEnvelope__Hankel-members.html  classEnvelope__Hankel.html  classEnvelope__Neumann-members.html  classEnvelope__Neumann.html  classEnvelope__function-members.html  classEnvelope__function.html  classEwald__integral-members.html  classEwald__integral.html  classHankel__function-members.html  (+45 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  classes_0.js  classes_3.js  classes_4.js  classes_7.js  classes_9.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  related_0.js  searchdata.js
docs/latex/: annotated.tex  classAtom.tex  classAtomic__quantity.eps  classAtomic__quantity.tex  classAugmented__Bessel.eps  classAugmented__Bessel.tex  classAugmented__Hankel.eps  classAugmented__Hankel.tex  classAugmented__function.eps  classAugmented__function.tex  classAugmented__spherical__wave.tex  classBessel__function.eps  classBessel__function.tex  classBloch__sum.tex  classBloch__summed__structure__constant.tex  classCrystal.tex  classDensity.eps  classDensity.tex  classEffective__potential.tex  classEnvelope__Bessel.eps  classEnvelope__Bessel.tex  classEnvelope__Hankel.eps  classEnvelope__Hankel.tex  classEnvelope__Neumann.eps  classEnvelope__Neumann.tex  classEnvelope__function.eps  classEnvelope__function.tex  classEwald__integral.tex  classHankel__function.eps  classHankel__function.tex  classLattice.tex  classLogarithmic__mesh.tex  classNeumann__function.eps  classNeumann__function.tex  classNumerov__solver.tex  classPotential.eps  classPotential.tex  classSpherical__function.eps  classSpherical__function.tex  classStructure__constant.tex  (+12 more)
docs/source/: Building.rst  Greetings.rst  Introduction.rst  Requirements.rst  conf.py  index.rst  sphinx-index.rst
include/gsl-asw/: asw_basis.h  atom.h  atomic_quantity.h  augmented_fun.h  augmented_spherical_wave.h  bloch_sum.h  brillouin_zone_integration.h  crystal.h  dirac.h  envelope_fun.h  ewald_int.h  gaunt.h  k-mesh.h  lattice.h  log_mesh.h  mixer.h  numerical-mesh-applier.h  numerical-mesh-integration.h  numerical-mesh.h  numerov_solver.h  poisson.h  schroedinger.h  simulation.h  site.h  spherical_fun.h  structure_const.h  utils.h  xc_func.h
src/: CMakeLists.txt  atom.cpp  atom.h  atomic_quantity.cpp  atomic_quantity.h  augmented_fun.cpp  augmented_fun.h  augmented_spherical_wave.cpp  augmented_spherical_wave.h  bloch_sum.cpp  bloch_sum.h  brillouin_zone_integration.cpp  crystal.cpp  crystal.h  crystal.h.old  eff_pot.cpp  eff_pot.h  envelope_fun.cpp  envelope_fun.h  ewald_int.cpp  ewald_int.h  gaunt.cpp  gaunt.h  k-mesh.cpp  k-mesh.h  lattice.cpp  lattice.h  log_mesh.cpp  log_mesh.h  main.cpp  numerov_solver.cpp  numerov_solver.h  schroedinger.h  simulation.cpp  simulation.h  spherical_fun.cpp  spherical_fun.h  structure_const.cpp  structure_const.h  tb.cpp  (+9 more)
test/: bloch_sum_test.cpp  bloch_summed_structure_constants.cpp  spherical_functions_test.cpp
tests/: CMakeLists.txt  bloch_sum_test.cpp  bloch_summed_structure_constants.cpp  main_test.cpp  spherical_functions_test.cpp
(+275 files in other folders)
